package Ejercicio_07;

public enum NivelDificultad {
    VERDE,
    AZUL,
    ROJA,
    NEGRA
}