package Ejercicio_07;
public class PruebaEquipo extends Prueba {
    public PruebaEquipo(String nombre, String tipo, EstacionEsqui estacion) {
        super(nombre, tipo, estacion);
    }
}