package Ejercicio_07;
// Mismo código para ambas variaciones, solo cambian el nombre de la clase
public class PruebaIndividual extends Prueba {
    public PruebaIndividual(String nombre, String tipo, EstacionEsqui estacion) {
        super(nombre, tipo, estacion);
    }
}